Spring Security 6.0を使ったPre-Authentication